K8s_deployment/my_deployment_projet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fastapi-deployment
  labels:
    app: my-fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-fastapi
  template:
    metadata:
      labels:
        app: my-fastapi
    spec:
      containers:
      - name: my-container-fast-api
        image: andre1994/detect_churn_api
        ports:
        - containerPort: 8000
