K8s_deployment/my_service_projet.yml
apiVersion: v1
kind: Service
metadata:
  name: my-fastapi-service
  labels:
    app: my-fastapi
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-fastapi
