K8s_deployment/my_ingress_projet.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-fastapi-ingress
spec:
  defaultBackend:
    service:
      name: my-fastapi-service
      port:
        number: 8000
